# rag-evaluator

./: .gitignore  README.md  codecov.yml  pyproject.toml
.github/workflows/: ci.yml
scripts/: check.py
src/: answer_generator.py  qa_pair_generator.py  utils.py
tests/: test_answer_generator.py  test_import.py  test_qa_pair_generator.py  test_utils.py
