[project]
name = "rag-evaluator"
version = "0.1.0"
description = "RAG evaluation utilities."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "ragas",
  "pandas",
  "requests",
  "python-dotenv",
  "openpyxl",
]

[project.scripts]
check = "scripts.check:main"

[project.optional-dependencies]
dev = [
  "jupyterlab",
  "ipykernel",
  "ruff",
  "pytest",
  "pytest-cov",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src", "scripts"]

[tool.ruff]
target-version = "py312"
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.coverage.run]
source = ["src"]
branch = true

[tool.coverage.report]
exclude_lines = [
  "pragma: no cover",
  "def __repr__",
  "raise NotImplementedError",
]
