[project]
name = "rag-evaluator"
version = "0.1.0"
description = "RAG evaluation utilities."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "ragas",
  "pandas",
  "requests",
  "python-dotenv",
  "openpyxl",
]

[project.scripts]
check = "scripts.check:main"

[project.optional-dependencies]
dev = [
  "jupyterlab",
  "ipykernel",
  "ruff",
  "mypy",
  "pydoclint",
  "pytest",
  "pytest-cov",
  "poethepoet",
  "types-requests",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src", "scripts"]
include = ["scripts/**"]

[tool.ruff]
target-version = "py312"
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.coverage.run]
source = ["src"]
branch = true

[tool.coverage.report]
exclude_lines = [
  "pragma: no cover",
  "def __repr__",
  "raise NotImplementedError",
]

[tool.mypy]
python_version = "3.12"
ignore_missing_imports = true
disallow_untyped_defs = false
check_untyped_defs = false
disable_error_code = ["import-untyped"]

[tool.poe.tasks]
lint = { cmd = "python -m scripts.check lint", help = "Run lint / format / static analysis (via scripts.check)" }
test = { cmd = "python -m scripts.check test", help = "Run tests with coverage (via scripts.check)" }
all = { cmd = "python -m scripts.check all", help = "Run all checks (lint + test)" }
